Replace Commands button with Configs button in client keyboard

--- a/web/translation/translate.ru_RU.toml
+++ b/web/translation/translate.ru_RU.toml
@@ -504,6 +504,7 @@
 "clientUsage" = "Получить статистику"
 "onlines" = "Онлайн-клиенты"
 "commands" = "Команды"
+"configs" = "Конфиги"
 
 [tgbot.answers]
 "getInboundsFailed" = "❌ Не удалось получить подключения."
