Add persistent reply keyboard for Telegram bot with main commands

--- a/web/translation/translate.en_US.toml
+++ b/web/translation/translate.en_US.toml
@@ -505,6 +505,7 @@
 "clientUsage" = "Get Usage"
 "onlines" = "Online Clients"
 "commands" = "Commands"
+"configs" = "Configs"
 
 [tgbot.answers]
 "getInboundsFailed" = "❌ Failed to get inbounds"
